--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,21 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                   </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/agricultor">Agricultor</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/cliente">Cliente</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/fornecedor">Fornecedor</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/funcionario">Funcionário</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="/venda">Venda</a>
+                  </li>
                 </ul>
             </div>
         </nav>
