--- a/src/main/resources/templates/venda/form.html
+++ b/src/main/resources/templates/venda/form.html
@@ -19,7 +19,10 @@
                             </div>
                         </div>
 
-                        
+                        <div class="form-group">
+                            <label>Valor Total da Venda</label>
+                            <input type="text" th:field="*{valorvenda}" class="form-control">
+                        </div>
                        
                         <div class="form-group">
                             <label for="slcFuncionario">Funcionário</label>
